css/styles_lp.css
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700;800&display=swap');


/********** Linsenpate **********/
/* Colors Used
Black bg: #212121;
Grey bg: #F8F8F8;

/*********** Linsenpate Intro **********/

#lp-intro{
    margin-top: 150px;
}

.lp-intro-flex-grid{
    padding-bottom: 6%;
    display: flex;
    align-items: flex-end;
    flex-direction: row;
    flex-wrap: wrap-reverse;
    justify-content: space-between;
    margin-top: 6em;
}

.lp-intro-left{
    flex-grow: 3;     
    flex-basis: 45%;
    min-width: 320px;
    padding-right: 5%;
 }

.lp-intro-right{
    flex-grow: 1;
    flex-basis: 55%;
    min-width: 320px;
}

.project-cta {
    margin-top: 24px;
    display: flex;
    flex-direction: row;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: center;
    max-width: 444px;
}
.project-cta .btn{
    max-width: 210px;
    margin-bottom: 6px;
    margin-top: 6px;
}

.project-cta .btn-secondary{
    max-width: 230px;
}

/*********** Linsenpate Challenge **********/

#challenge{
    padding-top: 5%;
    padding-bottom: 5%;
    background-color: #F8F8F8;
}

.table-flex-grid{
    margin-top: 5%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: flex-start;
    flex-basis: 20%;
}

.table-item{
    width:275px;
    display: flex;
    align-items: flex-start;
}

li{
    list-style-type: none;
}

.nr{
    font-size: 50px;
    text-align: right;
    font-weight: 700;
    font-family: Montserrat, Arial, Helvetica, sans-serif;
    color: #0C0093;
    margin-right: 20px;
    line-height: 50px;
}

li p{
    text-align: left;
}


/**** hero ****/
.lp-hero{
    width:100%;
}

/********* Linsenpate Project Description *********/


#prj-description{
    margin-top: 5em;
}

.prj-flex-grid{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-top: 6em;
}

.prj-left-col{
    flex-grow: 3;     
    flex-basis: 45%;
    min-width: 320px;
    padding-right: 5%;
}

.prj-right-col{
    flex-grow: 1;
    flex-basis: 55%;
    min-width: 320px;
}

.prj-left-col-2{
    margin-top: 48px;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    flex-flow: row nowrap;
    align-items: center;
}
.prj-left-col-2-left{
    margin-right: 35%;
}

.prj-goal{
    padding-top: 5%;
    padding-bottom: 5%;
}
.prj-goal ul li{
    list-style-type:disc;
    margin-left:-20px; 
}

/********** Linsenpate Mockups **********/

#mockups{
    padding-right: 15%;
    padding-left: 15%;
}

.lp-mockup-flex-grid-1{
    padding-bottom: 5%;
}

.mockup-box{
    display: flex;
    flex-direction: row;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
}
.mockup1{
    flex: 0 1 25%;
    min-width: 320px;
}

.mockup2{
    flex: 1 1 50%;
    min-width: 320px;  
}

.lp-mockup-flex-grid-2{
    display: flex;
    flex-direction: row;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: flex-start;
    padding-top: 5%;
    padding-bottom: 5%;
    padding-right: 15%;
    padding-left: 15%;
    background-color: #F8F8F8;
    width: 100%;
}
.mockup{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    flex: 1 1 50%;
    min-width: 320px;
}


/********* Design System **********/

#design-system{
    background-color: #212121;
    padding: 5% 0;

}

#design-system h3, #design-system h2, #design-system p, #design-system a {
    color:#f1f1f1;
    padding-bottom: 50px;
}

.ds-group{
    margin-top: 50px;
    margin-bottom:100px;
}
.colors-flex-grid{
    display: flex;
    flex-direction: row;
    align-content: flex-start;
    align-items: flex-start;
    flex-flow: row wrap;
    padding-right: 5%;
    padding-bottom: 5%;
}
.colors-flex-grid picture{
    flex: 0 1 20%;
}


.h3-typo{
    color: #BDBDBD!important;
    margin-bottom: 24px;
}

.h4-typo{
    color: #FEE46D;
    margin-bottom: 24px;
}

.typo-flex-grid{
    display: flex;
    flex-direction: row;
    align-content: flex-start;
    align-items: flex-start;
    flex-flow: row wrap;
    padding-right: 10%;
    padding-bottom: 5%;
}
.typo{
    flex: 1 1 auto;
    padding-right: 4em;
}

/****** LP Design Typography *******/

.lp-email-h1-desktop{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 72px;
    line-height: 83px;
}

.lp-email-h1-mobile{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 54px;
    line-height: 63px;
}

.lp-email-h2-desktop{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 50px;
    line-height: 58px;
}
.lp-email-h2-mobile{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 42px;
    line-height: 49px;   
}
.lp-email-h3-desktop{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 44px;
    line-height: 51px;  
}
.lp-email-h3-mobile{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 50px;
    line-height: 58px;  
}
.lp-h1{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 34px;
    line-height: 40px;
    letter-spacing: 0.6px;
}
.lp-h2{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 26px;
    line-height: 34px;
    letter-spacing: 0.6px;
}
.lp-h3{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 22px;
    line-height: 28px;
    letter-spacing: 0.6px;
}
.lp-h4{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 20px;
    line-height: 24px;
    letter-spacing: 0.6px;
}
.lp-h5{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 18px;
    line-height: 22px;
    letter-spacing: 0.6px;
}
.lp-h6{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 16px;
    line-height: 20px;
    letter-spacing: 0.6px;
}
.lp-h7{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 14px;
    line-height: 18px;
    letter-spacing: 0.6px;
}
.lp-bodyxl-link{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: normal;
    font-size: 20px;
    line-height: 28px;
    letter-spacing: 0.6px;
    text-decoration: underline;
}
.lp-bodyxl{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: normal;
    font-size: 20px;
    line-height: 28px;
    letter-spacing: 0.6px;
}
.lp-bodyl{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: normal;
    font-size: 20px;
    line-height: 28px;
    letter-spacing: 0.6px;
}
.lp-bodym{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: normal;
    font-size: 16px;
    line-height: 22px;
    letter-spacing: 0.6px;
}
.lp-bodym-link{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: normal;
    font-size: 16px;
    line-height: 22px;
    letter-spacing: 0.6px;
    text-decoration: underline;

}
.lp-bodys{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: normal;
    font-size: 14px;
    line-height: 18px;
    letter-spacing: 0.6px;
}
.lp-bodys-link{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: normal;
    font-size: 14px;
    line-height: 18px;
    letter-spacing: 0.3px;
    text-decoration: underline;
}
.lp-label{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: normal;
    font-size: 12px;
    line-height: 18px;
    letter-spacing: 0.3px;
}
.lp-labelbold{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: 700;
    font-size: 14px;
    line-height: 18px;
    letter-spacing: 0.3px;
}
.lp-labelcaps{
    font-family: Karla, Arial, Helvetica, sans-serif;
    font-weight: normal;
    font-size: 14px;
    line-height: 18px;
    letter-spacing: 0.3px;
}

/*********** Icons **********/
.icons{
    margin-bottom: 150px;
}

.buttons{
    display: flex;
    align-items: flex-start;
}


/********** Media Queries **********/


/* ==============================
Small devices // Smaller than iPad (768px and smaller)
================================= */
@media only screen and (max-width: 768px) {
    h1{
        font-size: 1.875rem;
        line-height: 42px;
    }

    .top-nav{
        display: none;
    }

    .hero-pic {
        display: none;
    }

    .hero-cta{
        margin-top: 35%;
        margin-bottom: 35%;
    }
    
    .work-wrapper h3, .container-about h3, .container-contact h3, #contact h3, .slides-wrapper h3, #recommendation h3 {
        padding-top:10%;
        padding-bottom: 6%;
    }

    .project p, .container-about p, .slide p{
        font-size: 1rem;
        line-height: 28px;
    }

    p.label-role{
        font-size: 0.85rem;
    }

    #recommendation .container-slides {
        margin-left: 2%;
        margin-right: 2%;
    }
}

/*********** Media Queries **********/

/* ==============================
Small devices // Smaller than iPad (768px and smaller)
================================= */
@media only screen and (max-width: 768px) {
    .lp-intro-left {
        text-align: center;
    }

    .project-cta{
        justify-content: center;
    }
}

/* ==============================
Large devices (1024px or larger)
================================= */
@media only screen and (max-width: 1024px) {
}
/* ==============================
X-large devices (1440px or larger)
================================= */
@media only screen and (max-width: 1440px) {
}

/* ==============================
Extra-large devices (1920px or larger)
================================= */
@media only screen and (max-width: 1920px) {
}

